--- a/_src/blocks/trusted-teaser-impact/trusted-teaser-impact.css
+++ b/_src/blocks/trusted-teaser-impact/trusted-teaser-impact.css
@@ -90,7 +90,6 @@
 @media (min-width: 992px) {
     .trusted-teaser-impact .box-wrapper {
         display: grid;
-        grid-auto-flow: column;
         grid-template-columns: repeat(4, 1fr);
         justify-content: center;
     }
